fix css spacing on landing page and function to check register page

--- a/src/components/Feature/styles.scss
+++ b/src/components/Feature/styles.scss
@@ -6,13 +6,13 @@
   width: 100%;
 
   &-create {
-    grid-template-columns: 1fr calc(1fr / 1.2);
+    grid-template-columns: 1fr 1fr;
   }
   &-join {
-    grid-template-columns: calc(1fr / 1.2) 1fr;
+    grid-template-columns: 1fr 1fr;
   }
   &-meet {
-    grid-template-columns: 1fr calc(1fr / 1.2);
+    grid-template-columns: 1fr 1fr;
   }
 
   &-content {
@@ -49,7 +49,6 @@
   }
 
   &-title {
-    line-height: 2.5rem;
     font-size: var(--text-2xl);
     font-family: 'Jost-Medium';
     opacity: var(--opacity-0);
